--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
     --background-color: rgba(5, 13, 24, 0.555);
 
-    --fundo-menu-lateral: #1e4275;
+    --fundo-menu-lateral: #24272b;
     --fundo-claro: #a6adb4;
     --fundo-escuro: #0325568c;
 
@@ -193,8 +193,50 @@ a {
 #hero {
     width: 100%;
     height: 100vh; /* view Port Height */
-    background: url("../img/bg-hero.png");
+    background: url("../img/bg-hero.png") top center;
     /* Criar img na I.A. */
     background-size: cover;
     position: relative;
 }
+
+#hero::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    inset: 0;
+    background-color: rgba(35, 24, 24, 0.5);
+}
+
+#hero .hero-container {
+    z-index: 3;
+    position: relative;
+    min-width: 300px;
+}
+
+#hero h2 {
+    margin: 0;
+    font-size: 100px;
+    font-weight: 600;
+    line-height: 1;
+    color: #fff; 
+}
+
+#hero p {
+    color: #fff;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    font-size: 26px;
+}
+
+#hero p span {
+    color: #3b4449;
+    padding-bottom: 4px;
+    letter-spacing: 2px;
+    border-bottom: 3px solid #3b4449;
+}
+
+/* Estrutura Base - Corpo */
+#main {
+    mar
+}
+
